# Cecilion

./: .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
include/ChaiScript-6.1.0/: releasenotes.md
include/ChaiScript-6.1.0/include/chaiscript/: CMakeLists.txt
include/fbx-master/src/: CMakeLists.txt  fbxdocument.cpp  fbxdocument.h  fbxdump.cpp  fbxnode.cpp  fbxnode.h  fbxproperty.cpp  fbxproperty.h  fbxutil.cpp
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glew-2.1.0/doc/: advanced.html
include/glm/glm/detail/: type_quat.hpp
include/glm/glm/gtx/: quaternion.hpp  string_cast.hpp
include/lua-5.4.0/src/: CMakeLists.txt
include/spdlog-1.x/: README.md
include/spdlog-1.x/include/spdlog/: spdlog.h
include/spdlog-1.x/include/spdlog/details/: os.h
include/spdlog-1.x/spdlog/fmt/bundled/: core.h  format.h
include/spdlog-1.x/spdlog/sinks/: android_sink.h
src/: CMakeLists.txt  Source.cmake
src/App/: CMakeLists.txt
src/App/src/: Sandbox.cpp  Sandbox.h
src/AppDebug/: CMakeLists.txt
src/AppDebug/src/: Debug.cpp
src/Cecilion/: CMakeLists.txt  Cecilion.h  Cecilion_HEADERS.cmake  README.md
src/Cecilion/Assets/: FBX_mesh.h  Instanced_mesh.cpp  Instanced_mesh.h  Scene.cpp  Scene.h
src/Cecilion/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Entry_point.h  GameNode.cpp  GameNode.h  Input.cpp  Input.h  Keycodes.h  Log.cpp  Log.h  Mouse_button_codes.h  README.md  Scene.cpp  Scene.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/Cecilion/Core/Assets/: Instanced_mesh.cpp  Instanced_mesh.h
src/Cecilion/Core/Layers/: Application_layer.h  Application_layer_mt.cpp  Application_layer_mt.h  Application_layer_st.cpp  Application_layer_st.h  Layer.h  Layer_group.h  Layer_stack.cpp  Layer_stack.h
src/Cecilion/Core/Layers_old/: Application_layer.h  Application_layer_mt.cpp  Application_layer_mt.h  Application_layer_st.cpp  Application_layer_st.h  Layer_stack.cpp  Layer_stack.h
src/Cecilion/Core/demo/: CMakeLists.txt  demo.cpp  demo.h
src/Cecilion/Core/libDemo/: Test.cpp
src/Cecilion/Debug/: Instrumentor.h
src/Cecilion/ECS/: CMakeLists.txt  Component.h  Component_iterator.h  Component_storage.h  Config.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  Filter.h
src/Cecilion/Event/: Async_inbox.cpp  Async_inbox.h  Buffered_inbox.cpp  Buffered_inbox.h  CMakeLists.txt  EventMessage.h  EventSystem.cpp  EventSystem.h  Event_actor.h  Event_actor_mt.cpp  Event_actor_mt.h  Event_actor_st.cpp  Event_actor_st.h  Event_inbox.cpp  Event_inbox.h  Event_message.h  Event_system.cpp  Event_system.h  I_EventActor.cpp  I_EventActor.h  I_Event_actor.cpp  I_Event_actor.h  I_Event_inbox.cpp  I_Event_inbox.h  Inbox_entry_container.cpp  Inbox_entry_container.h  System_events.h
src/Cecilion/Event-old/: CMakeLists.txt  Event_actor.h  Event_actor_mt.h  Event_actor_st.h  Event_system.h  README.md
src/Cecilion/ImGui/: CMakeLists.txt  ImGui_layer.cpp  ImGui_layer.h
src/Cecilion/Platform/: CMakeLists.txt  Platform.h
src/Cecilion/Platform/OpenGL/: CMakeLists.txt  GL_Frustum_compute_query.cpp  GL_Frustum_compute_query.h  GL_buffer.cpp  GL_buffer.h  GL_context.cpp  GL_context.h  GL_renderer_API.cpp  GL_renderer_API.h  GL_shader.cpp  GL_shader.h  GL_vertex_array.cpp  GL_vertex_array.h  OpenGL.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Cecilion/Platform/Windows/: CMakeLists.txt  W_window.cpp  W_window.h  Windows_input.cpp  Windows_input.h
src/Cecilion/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Compute_query.h  Distance_compute_query.cpp  Distance_compute_query.h  Frustum_compute_query.cpp  Frustum_compute_query.h  Render_command.cpp  Render_command.h  Renderer.cpp  Renderer.h  Renderer_API.cpp  Renderer_API.h  Shader.cpp  Shader.h  Shader_constants.cpp  Shader_constants.h  Vertex_array.cpp  Vertex_array.h
src/Cecilion/Utils/: CMakeLists.txt  Semaphore.cpp  Semaphore.h  Serializable.cpp  Serializable.h  Sparse_set.h  Timer.cpp  Timer.h  Type.cpp  Type.h  Uuid.cpp  Uuid.h
src/Cecilion/Utils/allocator/: Allocator.h  I_Sparse_table.h  Sparse_linked_table.h  Sparse_table.h
src/Cecilion/core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Entry_point.h  README.md
src/Cecilion/core/demo/: CMakeLists.txt  demo.cpp  demo.h
src/Cecilion/core/libDemo/: CMakeLists.txt
src/Cecilion/engine/: CMakeLists.txt  Cecilion.h  Log.cpp  Log.h  README.md
src/app/: CMakeLists.txt
src/app/src/: CMakeLists.txt  Sandbox.cpp  Sandbox.h  main.cpp
src/core/: CMakeLists.txt  README.md
src/core/demo/: CMakeLists.txt  demo.cpp  demo.h
src/core/libDemo/: Test.h
vendors/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/: 00-bug_report.md
vendors/yaml-cpp/test/gtest-1.11.0/docs/: advanced.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md  quickstart-bazel.md  quickstart-cmake.md
vendors/yaml-cpp/test/gtest-1.11.0/googletest/: README.md
